# AtlanticBeast

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-multi-platform.yml
Engine/: CMakeLists.txt
Engine/Application/: CMakeLists.txt
Engine/Application/Private/: AppResources.cpp  AppStatus.cpp
Engine/Application/Private/Input/: IBindMap.hpp  KeysMap.cpp  KeysMap.hpp  MouseMap.cpp  MouseMap.hpp  UserInput.cpp
Engine/Application/Private/Window/: BaseWindowDetails.cpp
Engine/Application/Private/Window/WindowPolicy/Apple/: BasicApplePolicy.cpp
Engine/Application/Private/Window/WindowPolicy/Linux/: BasicLinuxPolicy.cpp  BorderlessGameLinuxPolicy.cpp  GameLinuxPolicy.cpp  X11ErrorHandling.hpp
Engine/Application/Private/Window/WindowPolicy/Win32/: BasicWin32Policy.cpp  BorderlessGameWin32Policy.cpp  WindowModeGameWin32Policy.cpp
Engine/Application/Public/: App.h  AppResources.hpp  AppStatus.hpp  B33App.h  EmptyCanvas.hpp  EmptyWindow.hpp
Engine/Application/Public/Input/: Bind.h  ControllerObject.hpp  InputEvents.h  KeyList.hpp  MouseButtonList.hpp  UserInput.hpp
Engine/Application/Public/Window/: BaseWindowDetails.h  IBaseWindow.hpp  WindowDesc.hpp  WindowEvents.h  WindowListener.hpp
Engine/Application/Public/Window/WindowPolicy/: BasicSystemPolicy.hpp  BorderlessGameSystemPolicy.hpp  GameSystemPolicy.hpp  IWindowPolicy.hpp
Engine/Application/Public/Window/WindowPolicy/Apple/: BasicApplePolicy.hpp
Engine/Application/Public/Window/WindowPolicy/Linux/: BasicLinuxPolicy.hpp  BorderlessGameLinuxPolicy.hpp  GameLinuxPolicy.hpp
Engine/Application/Public/Window/WindowPolicy/Win32/: BasicWin32Policy.hpp  BorderlessGameWin32Policy.hpp  WindowModeGameWin32Policy.hpp
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: B33Core.cpp  Exception.cpp
Engine/Core/Private/Debug/: Logger.cpp
Engine/Core/Private/Synchronization/: DeltaTime.cpp  FpsLimiter.cpp  JobSystem.cpp
Engine/Core/Public/: AbLimits.h  B33Core.h  B33CoreMinimal.h  CPlusPlusStandard.hpp  CStandard.h  Core.h  Exception.hpp  ExportImport.h  MinimalAppleIncludes.h  MinimalLinuxIncludes.h  MinimalSystemIncludes.h  MinimalWindowsIncludes.h  Utility.hpp
Engine/Core/Public/Debug/: Assert.hpp  Logger.hpp
Engine/Core/Public/Synchronization/: DeltaTime.hpp  FpsLimiter.hpp  JobSystem.hpp
Engine/Math/: CMakeLists.txt
Engine/Math/Private/: B33Math.cpp
Engine/Math/Private/Primitives/: Object.cpp  Objects.cpp
Engine/Math/Public/: B33Math.hpp  Consts.hpp  Mat4.hpp  Operations.hpp  Rot.hpp  Vec3.hpp  Vec3Operators.hpp  Vec4.hpp
Engine/Math/Public/Primitives/: Cube.hpp  Cubes.hpp  Object.hpp  Objects.hpp
Engine/Prototypes/: Component.hpp
Engine/Prototypes/AssetsManager/: ExampleAsset.asset  Makefile  Test_Mesh.b33asset  generate_asset.py  main.cpp
Engine/Prototypes/ComponentSystem/: Component.cpp  LinuxEntry.hpp  Makefile  Project.cpp  ProjectHeader.hpp
Engine/Rendering/: CMakeLists.txt  shaders.cmake
Engine/Rendering/Private/: B33Rendering.cpp
Engine/Rendering/Private/Editor/: EditorPipeline.cpp
Engine/Rendering/Private/Raycaster/: Rays.cpp  Renderer.cpp  VoxelGrid.cpp  VoxelPipeline.cpp
Engine/Rendering/Private/Vulkan/: ComputeAdapter.cpp  GraphicsComputeAdapter.cpp  Instance.cpp  Memory.cpp  MinimalHardware.cpp  RTXDeviceAdapter.cpp  RTXHardware.cpp  Renderer.cpp  SwapChain.cpp  WrapperAdapter.cpp  WrapperHardware.cpp
Engine/Rendering/Public/: B33Rendering.hpp
Engine/Rendering/Public/Editor/: EditorPipeline.hpp  PushConstants.hpp
Engine/Rendering/Public/Primitives/: Camera.hpp  ColoredCube.hpp  ColoredCubes.hpp
Engine/Rendering/Public/Primitives/MaterialProperties/: ColorProperty.hpp  IMaterialProperties.hpp  ReflectionProperty.hpp  RoughnessProperty.hpp
Engine/Rendering/Public/Raycaster/: PushConstants.hpp  Rays.hpp  Renderer.hpp  Voxel.hpp  VoxelGrid.hpp  VoxelPipeline.hpp
Engine/Rendering/Public/Shaders/: RaycastAABB.comp
Engine/Rendering/Public/Shaders/glsl/: Colors.glsl  Common.glsl  Math.glsl  Primitves.glsl  Random.glsl  Raycast.comp.glsl
Engine/Rendering/Public/Shaders/hlsl/: Colors.hlsl  Editor.comp.hlsl  Intersect.hlsl  Math.hlsl  Random.hlsl  Raycast.comp.hlsl
Engine/Rendering/Public/Vulkan/: ComputeAdapter.hpp  ErrorHandling.hpp  FrameResources.hpp  GPUBuffer.hpp  GPUStreamBuffer.hpp  IAdapter.hpp  IHardware.hpp  IPipeline.hpp  IPushConstants.hpp  Instance.hpp  Memory.hpp  MemoryUploadTracker.hpp  MinimalHardware.hpp  RTXDeviceAdapter.hpp  RTXHardware.hpp  Renderer.hpp  SwapChain.hpp  WrapperAdapter.hpp  WrapperHardware.hpp  WrapperPipeline.hpp
Engine/System/: CMakeLists.txt
Engine/System/Private/: B33System.cpp  ComponentsOrder.cpp  EngineLoop.cpp  IComponent.cpp
Engine/System/Public/: B33System.hpp  ComponentBridge.hpp  ComponentsOrder.hpp  EngineLoop.hpp  IComponent.hpp
Engine/System/Public/EntryPoints/: DefaultSystemEntryPoint.hpp
Engine/System/Public/EntryPoints/Apple/: AppleEntry.hpp
Engine/System/Public/EntryPoints/Linux/: LinuxEntry.hpp
Engine/System/Public/EntryPoints/Win32/: Win32Entry.hpp
Project/: CMakeLists.txt
Project/Source/: Game.hpp  GameMaster.hpp  MainCharacter.hpp  PlayableCharacter.cpp  main.cpp
Projects/: CMakeLists.txt
Projects/Demo/: CMakeLists.txt
Projects/Demo/Source/: Game.hpp  GameMaster.cpp  GameMaster.hpp  MainCharacter.hpp  MainWindow.cpp  MainWindow.hpp  MyGame.cpp  MyGame.hpp  PlayableCharacter.cpp  Renderer.cpp  Renderer.hpp  RendererMaster.cpp  RendererMaster.hpp  WindowMaster.cpp  WindowMaster.hpp  main.cpp
