CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(B33)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_C_STANDARD 17)
SET(CMAKE_C_STANDARD_REQUIRED ON)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Bin/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Lib/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Lib/${TARGET_ARCH}/${CMAKE_BUILD_TYPE})

ADD_COMPILE_DEFINITIONS(UNICODE)
ADD_COMPILE_DEFINITIONS(_UNICODE)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Engine)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Projects)

IF (MSVC)

    SET_TARGET_PROPERTIES(${B33TARGET} PROPERTIES
        WIN32_EXECUTABLE TRUE
    )

ENDIF()
