CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

STRING(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" TARGET_ARCH)

IF (NOT (${CMAKE_CXX_STANDARD} STREQUAL "17"))

    MESSAGE("CMAKE_CXX_STANDARD isn't C++17. This engine was build with C++17 in mind.")

ENDIF()

IF(NOT TARGET_ARCH OR TARGET_ARCH STREQUAL "")

    SET(TARGET_ARCH "unknown")

ENDIF()

IF(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE=="Debug")

    SET(CMAKE_BUILD_TYPE "Debug")
    ADD_COMPILE_DEFINITIONS(_DEBUG)

ENDIF()


ADD_COMPILE_DEFINITIONS(_CRT_SECURE_NO_WARNINGS)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Core)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/System)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Math)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Application)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Rendering)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/External)
