FILE(GLOB_RECURSE PRJT_SOURCE 
    "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.hpp"
)

ADD_EXECUTABLE(AtlBee  
    "${PRJT_SOURCE}"
)

IF (MSVC)

    TARGET_COMPILE_OPTIONS(AtlBee PRIVATE "/permissive-")
    TARGET_COMPILE_OPTIONS(AtlBee PRIVATE "/GR-")

ELSE()

    IF (NOT CMAKE_BUILD_TYPE=="Debug")

        TARGET_COMPILE_OPTIONS(AtlBee PRIVATE "-O2")

    ENDIF()

ENDIF()

TARGET_LINK_LIBRARIES(AtlBee PRIVATE 
    BeeCore
    BeeApp
    BeeRendering
    Jolt
)
