SET(BEE_MATH_SOURCE 
    "${CMAKE_CURRENT_SOURCE_DIR}/Private/Primitives/Object.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Private/Math.cpp"
)
SET(BEE_MATH_HEADRES 
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Consts.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Mat4.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Operations.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Rot.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Vec3.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Vec3Operators.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Vec4.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Primitives/Object.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/Primitives/Cube.hpp"
)

ADD_LIBRARY(BeeMath SHARED
    "${BEE_MATH_SOURCE}"
    "${BEE_MATH_HEADRES}"
)

IF (MSVC)

    TARGET_COMPILE_OPTIONS(BeeMath PRIVATE "/permissive-")
    TARGET_COMPILE_OPTIONS(BeeMath PRIVATE "/GR-")

ELSE()

    IF (NOT CMAKE_BUILD_TYPE=="Debug")

        TARGET_COMPILE_OPTIONS(BeeMath PRIVATE "-O2")

    ENDIF()

ENDIF()

TARGET_INCLUDE_DIRECTORIES(BeeMath PUBLIC 
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/"
)

TARGET_LINK_LIBRARIES(BeeMath PUBLIC 
    BeeCore
)

TARGET_PRECOMPILE_HEADERS(BeeMath PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Public/Math.hpp")

TARGET_COMPILE_DEFINITIONS(BeeMath PRIVATE _BEAST_EXPORTS)


