SET(BEE_SYSTEM_SOURCE
    "${CMAKE_CURRENT_SOURCE_DIR}/Private/IComponent.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Private/EngineLoop.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Private/ComponentsOrder.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Private/B33System.cpp"
)
SET(BEE_SYSTEM_HEADRES
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/IComponent.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/ComponentBridge.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/ComponentsOrder.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/EngineLoop.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/B33System.hpp"
)

ADD_LIBRARY(B33System SHARED
    "${BEE_SYSTEM_SOURCE}"
    "${BEE_SYSTEM_HEADRES}"
)

IF (MSVC)

    TARGET_COMPILE_OPTIONS(B33System PUBLIC "/permissive-")
    TARGET_COMPILE_OPTIONS(B33System PUBLIC "/GR")

    IF (CMAKE_BUILD_TYPE!="Debug")

        TARGET_COMPILE_OPTIONS(B33System PUBLIC "/O2")
        
    ENDIF()

ELSE()

    IF (NOT CMAKE_BUILD_TYPE=="Debug")

        TARGET_COMPILE_OPTIONS(B33System PUBLIC "-O3")

    ENDIF()

ENDIF()

TARGET_INCLUDE_DIRECTORIES(B33System PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}/Public/"
)

TARGET_LINK_LIBRARIES(B33System PUBLIC
    B33Core
    B33App
)

TARGET_PRECOMPILE_HEADERS(B33System PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Public/B33System.hpp")

TARGET_COMPILE_DEFINITIONS(B33System PRIVATE _BEAST_EXPORTS _UNICODE UNICODE)
