FILE(GLOB_RECURSE PRJT_SOURCE 
    "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.hpp"
)

ADD_EXECUTABLE(AtlBee  
    "${PRJT_SOURCE}"
)

IF (MSVC)

    TARGET_COMPILE_OPTIONS(AtlBee PUBLIC "/permissive-")
    TARGET_COMPILE_OPTIONS(AtlBee PUBLIC "/GR-")

ELSE()

    IF (NOT CMAKE_BUILD_TYPE=="Debug")

        TARGET_COMPILE_OPTIONS(AtlBee PUBLIC "-O2")

    ENDIF()

ENDIF()

TARGET_LINK_LIBRARIES(AtlBee PRIVATE 
    B33Core
    B33App
    B33Rendering
    Jolt
)
